--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,6 +8,7 @@
   <div class="row">
     <div class="col-md-12">
       <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}" />
+      <img th:src="@{/resources/images/my-pet.jpg}" style="width:300px; border-radius:10px;" />
     </div>
   </div>
 
